--- a/package.json
+++ b/package.json
@@ -1,11 +1,17 @@
 {
-  "name": "wwa",
+  "name": "mancy-bot",
   "version": "1.0.0",
-  "type": "module",
-  "main": "index.js",
+  "main": "server.js",
+  "scripts": {
+    "start": "node server.js"
+  },
   "dependencies": {
-    "discord.js": "^14.0.0",
-    "groq-sdk": "^0.5.0",
-    "dotenv": "^16.0.0"
+    "discord.js": "^14.14.1",
+    "groq-sdk": "^0.3.0",
+    "dotenv": "^16.3.1",
+    "node-fetch": "^2.6.9"
+  },
+  "engines": {
+    "node": ">=18.0.0"
   }
 }
