--- a/package.json
+++ b/package.json
@@ -1,17 +1,129 @@
 {
-  "name": "mancy-bot",
-  "version": "1.0.0",
+  "name": "mancy-bot-control",
+  "version": "2.0.0",
+  "description": "Discord AI bot with web control panel",
   "main": "server.js",
+  "type": "module",
   "scripts": {
-    "start": "node server.js"
+    "start": "node server.js",
+    "dev": "nodemon server.js",
+    "bot-only": "node bot-only.js",
+    "web-only": "node web-server.js",
+    "setup": "node setup.js",
+    "backup": "node backup.js",
+    "clean": "rm -rf node_modules && npm cache clean --force",
+    "install-deps": "npm install --production",
+    "install-dev": "npm install",
+    "test": "node test-connection.js",
+    "lint": "npx eslint .",
+    "format": "npx prettier --write .",
+    "docker-build": "docker build -t mancy-bot .",
+    "docker-run": "docker run -p 3000:3000 --env-file .env mancy-bot",
+    "pm2-start": "pm2 start ecosystem.config.js",
+    "pm2-stop": "pm2 stop mancy-bot",
+    "pm2-restart": "pm2 restart mancy-bot",
+    "pm2-logs": "pm2 logs mancy-bot",
+    "pm2-monitor": "pm2 monit",
+    "deploy": "npm run lint && npm test && npm run pm2-restart"
+  },
+  "keywords": [
+    "discord",
+    "bot",
+    "ai",
+    "groq",
+    "control-panel",
+    "websocket",
+    "dashboard",
+    "chatbot"
+  ],
+  "author": "Mancy Development Team",
+  "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/yourusername/mancy-bot.git"
+  },
+  "bugs": {
+    "url": "https://github.com/yourusername/mancy-bot/issues"
+  },
+  "homepage": "https://github.com/yourusername/mancy-bot#readme",
+  "engines": {
+    "node": ">=18.0.0",
+    "npm": ">=9.0.0"
   },
   "dependencies": {
     "discord.js": "^14.14.1",
     "groq-sdk": "^0.3.0",
+    "express": "^4.18.2",
+    "ws": "^8.14.2",
+    "cors": "^2.8.5",
     "dotenv": "^16.3.1",
-    "node-fetch": "^2.6.9"
+    "sqlite3": "^5.1.6",
+    "sqlite": "^5.1.1",
+    "helmet": "^7.0.0",
+    "compression": "^1.7.4",
+    "morgan": "^1.10.0",
+    "winston": "^3.10.0",
+    "express-rate-limit": "^6.10.0",
+    "express-validator": "^7.0.1",
+    "bcryptjs": "^2.4.3",
+    "jsonwebtoken": "^9.0.2",
+    "uuid": "^9.0.0",
+    "node-cron": "^3.0.2",
+    "node-fetch": "^3.3.2",
+    "moment": "^2.29.4",
+    "chalk": "^4.1.2",
+    "figlet": "^1.6.0"
   },
-  "engines": {
-    "node": ">=18.0.0"
-  }
+  "devDependencies": {
+    "nodemon": "^3.0.1",
+    "eslint": "^8.48.0",
+    "prettier": "^3.0.2",
+    "jest": "^29.6.4",
+    "supertest": "^6.3.3",
+    "@types/node": "^20.5.9",
+    "@types/express": "^4.17.17",
+    "@types/ws": "^8.5.6",
+    "@types/cors": "^2.8.13",
+    "typescript": "^5.2.2"
+  },
+  "optionalDependencies": {
+    "bufferutil": "^4.0.7",
+    "utf-8-validate": "^5.0.10"
+  },
+  "files": [
+    "server.js",
+    "bot-only.js",
+    "web-server.js",
+    "public/",
+    "data/",
+    "logs/",
+    "config/",
+    "scripts/",
+    "README.md",
+    "LICENSE",
+    ".env.example"
+  ],
+  "directories": {
+    "public": "public",
+    "data": "data",
+    "logs": "logs",
+    "config": "config",
+    "scripts": "scripts"
+  },
+  "publishConfig": {
+    "access": "public"
+  },
+  "funding": {
+    "type": "individual",
+    "url": "https://github.com/sponsors/yourusername"
+  },
+  "os": [
+    "linux",
+    "darwin",
+    "win32"
+  ],
+  "cpu": [
+    "x64",
+    "arm64"
+  ]
 }
